Fixed issue on Tile Game mobile resolution where refresh button and customiser button overlap

--- a/tilegame/css/boilerplate.css
+++ b/tilegame/css/boilerplate.css
@@ -50,4 +50,8 @@ button:hover {
   button {
     width: 40%;
   }
+
+  .hidden-mobile {
+    opacity: 0;
+  }
 }
