--- a/tilegame/css/control-panel.css
+++ b/tilegame/css/control-panel.css
@@ -76,6 +76,7 @@
   transition: 0.2s;
   border: none;
   z-index: 2;
+  border: solid 2px red;
 }
 
   .customiser-button:hover {
